--- a/content/posts/大话设计模式0面向对象.md
+++ b/content/posts/大话设计模式0面向对象.md
@@ -2,6 +2,8 @@
 title: "大话设计模式：0.面向对象基础"
 date: 2020-05-14T22:24:58+08:00
 draft: false
+tags: ["设计模式","面向对象"]
+categories: ["大话设计模式笔记"]
 ---
 
 # 大话设计模式：0.面向对象基础
