大话设计模式：9.原型模式

--- a/content/posts/大话设计模式8工厂模式.md
+++ b/content/posts/大话设计模式8工厂模式.md
@@ -2,18 +2,18 @@
 title: "大话设计模式8工厂模式"
 date: 2020-06-05T17:54:17+08:00
 draft: false
-tags: ["设计模式", "面向对象", "设计原则"]
+tags: ["设计模式", "面向对象"]
 categories: ["大话设计模式笔记"]
 ---
 
-# 1. 大话设计模式：8.工厂模式
+# 大话设计模式：8.工厂模式
 
 > 工厂模式：定义一个用于创建对象的接口，让子类决定实例化哪一个类。工厂方法使一个类的实例化延迟到其子类。  
 > TL;DR：相比于简单工厂将实例化过程封装，工厂模式进一步将分支与实例化的耦合分离。
 
 <!-- TOC -->
 
-- [1. 大话设计模式：8.工厂模式](#1-大话设计模式8工厂模式)
+- [大话设计模式：8.工厂模式](#大话设计模式8工厂模式)
   - [1. 工厂模式 vs 简单工厂模式](#1-工厂模式-vs-简单工厂模式)
     - [1.1. 回顾简单工厂：](#11-回顾简单工厂)
     - [1.2. 分支与简单工厂类解耦](#12-分支与简单工厂类解耦)
