大话设计模式12-14

--- a/content/posts/大话设计模式11迪米特法则.md
+++ b/content/posts/大话设计模式11迪米特法则.md
@@ -1,5 +1,5 @@
 ---
-title: "大话设计模式11:最少知识原则"
+title: "大话设计模式11：最少知识原则"
 date: 2020-06-30T23:53:23+08:00
 draft: false
 tags: ["设计模式", "面向对象", "设计原则"]
