--- a/content/posts/大话设计模式17适配器模式.md
+++ b/content/posts/大话设计模式17适配器模式.md
@@ -1,5 +1,5 @@
 ---
-title: "大话设计模式17适配器模式"
+title: "大话设计模式17：适配器模式"
 date: 2020-08-26T16:21:02+08:00
 draft: false
 tags: ["设计模式", "面向对象", "设计原则"]
@@ -12,7 +12,7 @@ categories: ["大话设计模式笔记"]
 
 > TL;DR: 通过对原有接口进行封装，使得它具有新接口的外观，和原有接口的功能
 
-![状态模式结构图](/images/状态模式.jpg)
+![适配器模式结构图](/images/适配器模式.jpg)
 
 ## 1.目的
 
