--- a/content/posts/大话设计模式19组合模式.md
+++ b/content/posts/大话设计模式19组合模式.md
@@ -2,7 +2,7 @@
 title: "大话设计模式19：组合模式"
 date: 2020-08-27T16:41:08+08:00
 draft: false
-tags: ["设计模式", "面向对象", "设计原则"]
+tags: ["设计模式", "面向对象"]
 categories: ["大话设计模式笔记"]
 ---
 
