--- a/content/posts/大话设计模式14观察者模式.md
+++ b/content/posts/大话设计模式14观察者模式.md
@@ -2,7 +2,7 @@
 title: "大话设计模式14：观察者模式"
 date: 2020-08-23T22:51:55+08:00
 draft: false
-tags: ["设计模式", "面向对象", "设计原则"]
+tags: ["设计模式", "面向对象"]
 categories: ["大话设计模式笔记"]
 ---
 
