--- a/content/posts/大话设计模式18备忘录模式.md
+++ b/content/posts/大话设计模式18备忘录模式.md
@@ -2,7 +2,7 @@
 title: "大话设计模式18：备忘录模式"
 date: 2020-08-26T16:21:31+08:00
 draft: false
-tags: ["设计模式", "面向对象", "设计原则"]
+tags: ["设计模式", "面向对象"]
 categories: ["大话设计模式笔记"]
 ---
 
