软工传统系统 vs 深度学习系统

--- a/content/posts/大话设计模式0面向对象.md
+++ b/content/posts/大话设计模式0面向对象.md
@@ -16,7 +16,7 @@ categories: ["大话设计模式笔记"]
   - [1. 类 & 对象](#1-类--对象)
   - [2. 重载(overload) & 重写(override)](#2-重载overload--重写override)
   - [3. 字段 & 属性](#3-字段--属性)
-  - [4. OO 三大特性：](#4-oo三大特性)
+  - [4. OO 三大特性：](#4-oo-三大特性)
     - [4.1. 封装](#41-封装)
     - [4.2. 继承](#42-继承)
     - [4.3. 多态](#43-多态)
