更新软工排版

--- a/content/posts/软件工程1传统软件系统与基于深度学习的软件系统差异分析.md
+++ b/content/posts/软件工程1传统软件系统与基于深度学习的软件系统差异分析.md
@@ -2,11 +2,12 @@
 title: "软件工程1：传统软件系统与基于深度学习的软件系统差异分析"
 date: 2020-10-20T08:29:25+08:00
 draft: false
+tags: ["软件工程"]
+categories: ["软件工程"]
 ---
 # 软件工程：1.传统软件系统与基于深度学习的软件系统差异分析
 
-## 运行机制
-### 概述
+## 1. 运行机制
 运行机制的不同指明了传统软件系统和基于深度学习软件系统的分界
 - 传统软件系统：对于给定问题，进行功能和模块划分，每个子任务通过硬编码的方式实现，并最终组合组成系统。特点是当每个子任务算法确定后，算法本身并不依赖外部数据或环境本身，即可完成目标任务，但是算法与应用场景是强相关的，可迁移性和适应性较弱。
 - 基于深度学习的软件系统：在我看来基于深度学习的软件系统并非完全由深度学习驱动，而是在传统软件的基础上，融入深度学习作为辅助或核心算法，对于每一个子任务的解决，不是根据辑判断的方式进行，而是以数据驱动，学习经验的方式，根据已有数据（即经验）的方式，对目标任务给出预测结果。他们之间的根本差别在于机器学习是以隐式而非直接的方式解决问题，在依赖外部数据的情况下，对任务的处理有较好的泛化性和迁移能力。
